manifest/objects/Performance_Guarantees__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Performance Guarantees</relationshipLabel>
        <relationshipName>Performance_Guarantees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Performance Guarantees</relationshipLabel>
        <relationshipName>Performance_Guarantees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Calculation_Method__c</fullName>
        <label>Calculation Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Breakeven</fullName>
                    <isActive>false</isActive>
                    <label>Breakeven</label>
                </value>
                <value>
                    <fullName>Gap to Goal</fullName>
                    <isActive>false</isActive>
                    <label>Gap to Goal</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>ROI</fullName>
                    <isActive>false</isActive>
                    <label>ROI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Abandon_Rate__c</fullName>
        <inlineHelpText>Indicate the abandon rate %</inlineHelpText>
        <label>***Deprecated***Call Center Abandon Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Call_Center_Avg_Response_Seconds__c</fullName>
        <inlineHelpText>Average call center response in seconds</inlineHelpText>
        <label>***DepCall Center Avg Response (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Center_Calls_Required__c</fullName>
        <inlineHelpText>Indicate the minimum % of call required by the PG (e.g., enter 80 if 80% of calls must be answered within 30 seconds)</inlineHelpText>
        <label>***Deprecated*Call Center Calls Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Credit_or_Refund__c</fullName>
        <label>Credit or Refund</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>No Fees at Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Frequency__c</fullName>
        <inlineHelpText>How often the client evaluates if we met PG</inlineHelpText>
        <label>Evaluation Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Per Occurrence</fullName>
                </value>
                <value>
                    <fullName>By Plan Milestones</fullName>
                </value>
                <value>
                    <fullName>First Year</fullName>
                </value>
                <value>
                    <fullName>Implementation Period</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees_At_Risk_Payment_Term__c</fullName>
        <inlineHelpText>&quot;Enter in number of months&quot;</inlineHelpText>
        <label>Fees At Risk Payment Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_At_Risk_Payment_Timeframe__c</fullName>
        <inlineHelpText>&quot;Enter in number of months&quot;</inlineHelpText>
        <label>Fees At Risk Payment Timeframe</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_At_Risk_Unit__c</fullName>
        <label>Fees At Risk Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dollar</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees_at_Risk_Amount__c</fullName>
        <inlineHelpText>Enter the fees at risk amount, if fees are at risk</inlineHelpText>
        <label>Fees at Risk Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_at_Risk_Type__c</fullName>
        <label>Fees at Risk Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Fees at Risk</fullName>
                </value>
                <value>
                    <fullName>PPPM</fullName>
                </value>
                <value>
                    <fullName>Percentage of Refund</fullName>
                </value>
                <value>
                    <fullName>PEPM</fullName>
                </value>
                <value>
                    <fullName>Administrative Fees</fullName>
                </value>
                <value>
                    <fullName>Quarterly Fees</fullName>
                </value>
                <value>
                    <fullName>Total Fees</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                    <isActive>false</isActive>
                    <label>Consult</label>
                </value>
                <value>
                    <fullName>Membership</fullName>
                    <isActive>false</isActive>
                    <label>Membership</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees_at_Risk__c</fullName>
        <label>***Deprecated***Fees at Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_PG_Comments__c</fullName>
        <label>General PG Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantee_Description__c</fullName>
        <inlineHelpText>Add the PG language/details</inlineHelpText>
        <label>Guarantee Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guarantee_Origin__c</fullName>
        <defaultValue>&apos;TDH&apos;</defaultValue>
        <inlineHelpText>Indicate which group the PG originated from</inlineHelpText>
        <label>***Deprecated***Guarantee Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HY</fullName>
                </value>
                <value>
                    <fullName>Consult a Doctor</fullName>
                </value>
                <value>
                    <fullName>AmeriDoc</fullName>
                </value>
                <value>
                    <fullName>Stat Health</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Livongo</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>TDH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantee_Subtype__c</fullName>
        <label>Guarantee Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Guarantee_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Contact/Case</fullName>
                </value>
                <value>
                    <fullName>Initiation/Claims</fullName>
                </value>
                <value>
                    <fullName>Submittal/Responsiveness</fullName>
                </value>
                <value>
                    <fullName>Enrollment Rate</fullName>
                </value>
                <value>
                    <fullName>Engagement Rate</fullName>
                </value>
                <value>
                    <fullName>Activation Rate</fullName>
                </value>
                <value>
                    <fullName>Coaching Response Time</fullName>
                </value>
                <value>
                    <fullName>Member Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>A1c Reduce and Maintain</fullName>
                </value>
                <value>
                    <fullName>Weight Loss</fullName>
                </value>
                <value>
                    <fullName>BP Reduce and Maintain</fullName>
                </value>
                <value>
                    <fullName>Change in Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Change in Treatment Plan</fullName>
                </value>
                <value>
                    <fullName>Sustained Active User Engagement</fullName>
                </value>
                <value>
                    <fullName>Referrals</fullName>
                </value>
                <value>
                    <fullName>PHQ-9/GAD-7</fullName>
                </value>
                <value>
                    <fullName>Provider Response Time</fullName>
                </value>
                <value>
                    <fullName>New Patient/Initial Visits</fullName>
                </value>
                <value>
                    <fullName>Follow-up Visits</fullName>
                </value>
                <value>
                    <fullName>Abandon Rate</fullName>
                </value>
                <value>
                    <fullName>Average Speed to Answer</fullName>
                </value>
                <value>
                    <fullName>Virtual Call Center Uptime</fullName>
                </value>
                <value>
                    <fullName>Response Time</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Reporting</fullName>
                </value>
                <value>
                    <fullName>On-Time Implementation</fullName>
                </value>
                <value>
                    <fullName>System Availability/Uptime</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Breakeven</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantee_Type__c</fullName>
        <label>Guarantee Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Member Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Clinical Outcomes</fullName>
                </value>
                <value>
                    <fullName>Access &amp; Availability</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Enrollment Target</fullName>
                </value>
                <value>
                    <fullName>ROI</fullName>
                </value>
                <value>
                    <fullName>Operational/Service SLA</fullName>
                </value>
                <value>
                    <fullName>Client/Account Management Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Utilization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Call Center Abandon Rate</fullName>
                    <isActive>false</isActive>
                    <label>Call Center Abandon Rate</label>
                </value>
                <value>
                    <fullName>Call Center Avg Speed to Answer</fullName>
                    <isActive>false</isActive>
                    <label>Call Center Avg Speed to Answer</label>
                </value>
                <value>
                    <fullName>Client Satisfaction</fullName>
                    <isActive>false</isActive>
                    <label>Client Satisfaction</label>
                </value>
                <value>
                    <fullName>Combined Utilization</fullName>
                    <isActive>false</isActive>
                    <label>Combined Utilization</label>
                </value>
                <value>
                    <fullName>Guaranteed Healthcare Outcomes</fullName>
                    <isActive>false</isActive>
                    <label>Guaranteed Healthcare Outcomes</label>
                </value>
                <value>
                    <fullName>Member/Participant Satisfaction</fullName>
                    <isActive>false</isActive>
                    <label>Member/Participant Satisfaction</label>
                </value>
                <value>
                    <fullName>On-Time Implementation</fullName>
                    <isActive>false</isActive>
                    <label>On-Time Implementation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Life_of_Contract__c</fullName>
        <inlineHelpText>If Yes, the PG will not have an End Date</inlineHelpText>
        <label>Life of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Satisfaction_Score__c</fullName>
        <inlineHelpText>Indicate the complete member satisfaction score and criteria (e.g., 10%)</inlineHelpText>
        <label>***Deprecated**Member Satisfaction Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Satisfaction_Surveys__c</fullName>
        <inlineHelpText>Indicate the minimum number of member satisfaction surveys required</inlineHelpText>
        <label>***DeprecatedMember Satisfaction Surveys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Calculation_Method__c</fullName>
        <label>***Deprecated***Other Calculation Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Evaluation_Frequency__c</fullName>
        <label>Other Evaluation Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Fees_at_Risk_Type__c</fullName>
        <label>Other Fees at Risk Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Guarantee_Type__c</fullName>
        <inlineHelpText>Indicate the guarantee type if &apos;Other&apos; is selected in Guarantee Type field (Member/Participant = Patient, Client = Employer)</inlineHelpText>
        <label>Other Guarantee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Additional_Measurement_Start_Date__c</fullName>
        <label>PG Additional Measurement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_Additional_Measurement_Term_Recurring__c</fullName>
        <label>PG Additional Measurement Term Recurring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Additional_Measurement_Term__c</fullName>
        <label>PG Additional Measurement Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_Baseline_Threshold__c</fullName>
        <label>PG Baseline Threshold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>7.5</fullName>
                </value>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>130</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Baseline_Type__c</fullName>
        <label>PG Baseline Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-reported a1c</fullName>
                </value>
                <value>
                    <fullName>Estimated a1c in the first month</fullName>
                </value>
                <value>
                    <fullName>Average Systolic BP during the first month</fullName>
                </value>
                <value>
                    <fullName>Self-reported BMI</fullName>
                </value>
                <value>
                    <fullName>Self-reported BP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Calculation_Party__c</fullName>
        <label>PG Calculation Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Teladoc</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_End_Date__c</fullName>
        <label>PG End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_Engagement_Requirement__c</fullName>
        <label>PG Engagement Requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Format__c</fullName>
        <label>PG Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generally Available</fullName>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Gap_to_Goal_Details__c</fullName>
        <label>PG Gap to Goal Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Initial_Measurement_Term_Recurring__c</fullName>
        <label>PG Initial Measurement Term Recurring</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Initial_Measurement_Term__c</fullName>
        <label>PG Initial Measurement Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_Level__c</fullName>
        <label>PG Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Book of Business</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Minimum_Enrollment_Months__c</fullName>
        <label>PG Minimum Enrollment Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_Minimum_Sample_Size__c</fullName>
        <label>PG Minimum Sample Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_Outcome_Measure__c</fullName>
        <label>PG Outcome Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The last available reading between month seven (7) and month twelve (12)</fullName>
                </value>
                <value>
                    <fullName>The lowest available reading between month 7 and 12</fullName>
                </value>
                <value>
                    <fullName>Cumulative values</fullName>
                </value>
                <value>
                    <fullName>The last available reading during the measurement period</fullName>
                </value>
                <value>
                    <fullName>Average reduction as of the first anniversary of the Member Recruitment Start Date</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Outcome_Target_Unit__c</fullName>
        <label>PG Outcome Target Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>mmHg</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Outcome_Target__c</fullName>
        <label>PG Outcome Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Outcome_Timing_Unit__c</fullName>
        <label>PG Outcome Timing Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Outcome_Timing__c</fullName>
        <label>PG Outcome Timing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_Reporting_Delivery_Days__c</fullName>
        <label>PG Reporting Delivery Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_Start_Date__c</fullName>
        <label>PG Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_Status__c</fullName>
        <label>PG Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>COVID Waiver</fullName>
                    <isActive>false</isActive>
                    <label>COVID Waiver</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expert Medical Service</fullName>
                </value>
                <value>
                    <fullName>Virtual Care Services</fullName>
                </value>
                <value>
                    <fullName>Chronic Care Management</fullName>
                </value>
                <value>
                    <fullName>Livongo Services</fullName>
                    <isActive>false</isActive>
                    <label>Livongo Services</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <inlineHelpText>Indicate the product name(s) if the PG/SLA is product-specific</inlineHelpText>
        <label>Product Name (if product specific)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_At_Risk__c</fullName>
        <label>Program At Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Total Invoice</fullName>
                </value>
                <value>
                    <fullName>Program Only</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Guarantee__c</fullName>
        <inlineHelpText>Indicate the ROI guarantee required by the PG (e.g., &quot;1.75:1 ROI&quot;)</inlineHelpText>
        <label>***Deprecated***ROI Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Frequency__c</fullName>
        <label>Reporting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi Annual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Document__c</fullName>
        <label>Source Document</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilization_Guarantee__c</fullName>
        <inlineHelpText>Indicate the minimum utilization OR combined utilization to meet PG (include &quot;%&quot; if percentage and &quot;cases&quot; if based on # of case</inlineHelpText>
        <label>***Deprecated***Utilization Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_Comments__c</fullName>
        <label>***Deprecated***Waiver Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_End_Date__c</fullName>
        <label>***Deprecated***Waiver End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiver_Start_Date__c</fullName>
        <label>***Deprecated***Waiver Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>